--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 								<li><a href="#" data-scroll-nav="1">features</a></li>
 								<li><a href="#" data-scroll-nav="2">about</a></li>
 								<li><a href="#" data-scroll-nav="3">testimonial</a></li>
-								<li><a href="#" data-scroll-nav="4">pricing</a></li>
+								<li><a href="#" data-scroll-nav="4">Price</a></li>
 							</ul>
 						</div>
 					</nav>
