--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
 						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 							<ul class="nav navbar-nav navbar-right">
 								<li><a href="#" data-scroll-nav="0">Home</a></li>
-								<li><a href="#" data-scroll-nav="1">features</a></li>
-								<li><a href="#" data-scroll-nav="2">about</a></li>
-								<li><a href="#" data-scroll-nav="3">testimonial</a></li>
-								<li><a href="#" data-scroll-nav="4">Price</a></li>
+								<li><a href="#" data-scroll-nav="1">Social Media</a></li>
+								<li><a href="#" data-scroll-nav="2">SEO</a></li>
+								<li><a href="#" data-scroll-nav="3">Website</a></li>
+								<li><a href="#" data-scroll-nav="4">Branding</a></li>
 							</ul>
 						</div>
 					</nav>
@@ -121,13 +121,6 @@
 							<img src="images/notes.svg" width="51" height="45" alt="icon notes" class="img-responsive">
 						</div>
 						<h3><a href="#">Make notes easily</a></h3>
-						<p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore.</p>
-					</li>
-					<li>
-						<div class="icon-holder">
-							<img src="images/calculator.svg" width="52" height="60" alt="icon calculator" class="img-responsive">
-						</div>
-						<h3><a href="#">Calculate daily cost</a></h3>
 						<p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore.</p>
 					</li>
 					<li>
