--- a/index.html
+++ b/index.html
@@ -148,7 +148,11 @@
 					<div class="col-xs-12 col-sm-6 descr sameheight">
 						<div class="align">
 							<h2>No more confusion and complex to manage your office.</h2>
-							<p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+								<p> -Keyword research, keyword implementation planning</p>
+								<p>	-Optimize the website's front-end and back-end.</p>
+								<p> -Optimize content and implement an editorial schedule.</p>	
+								<p> -Write content for the website, create Front-end content.</p>	
+								<p>	-Combination of SEO and PPC</p>
 							<ul class="facts-list">
 								<li>
 									<h3><span class="counter">230</span><span class="text-block">Components</span></h3>
