--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 						<h3><a href="#">One click cleaning</a></h3>
 						<p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore.</p>
 					</li>
-					<li>
+					<li class = "outsider">
 						<div class="icon-holder">
 							<img src="images/calendar.svg" width="49" height="51" alt="icon calandar" class="img-responsive">
 						</div>
