--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 								<span class="icon-bar"></span>
 							</button>
 						</div>
-						<a href="#" class="btn btn-default btn-white">Try Demo</a>
+						<a href="#" class="btn btn-default btn-white">Our Website</a>
 						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 							<ul class="nav navbar-nav navbar-right">
 								<li><a href="#" data-scroll-nav="0">Home</a></li>
@@ -83,8 +83,8 @@
 				<div class="container">
 					<div class="row">
 						<header class="heading-holder col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
-							<h1><span class="text-small">best software for your office</span>Try Cooper Today!</h1>
-							<p>Lorem ipsum dolor sit amet, adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+							<h1><span class="text-small">Best software for your office</span>Try Freewill Today!</h1>
+							<p> -- Freewill -- Nothing Better Than Free </p>
 						</header>
 					</div>
 					<div class="aligncenter">
@@ -106,35 +106,35 @@
 						<div class="icon-holder">
 							<img src="images/id-card.svg" width="54" height="52" alt="icon id-card" class="img-responsive">
 						</div>
-						<h3><a href="#">Special Login System</a></h3>
+						<h3><a href="#">Keyword research</a></h3>
 						<p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore.</p>
 					</li>
 					<li>
 						<div class="icon-holder">
 							<img src="images/clock.svg" width="56" height="50" alt="icon clock" class="img-responsive">
 						</div>
-						<h3><a href="#">Time Tracking</a></h3>
+						<h3><a href="#">Advertising strategy</a></h3>
 						<p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore.</p>
 					</li>
 					<li>
 						<div class="icon-holder">
 							<img src="images/notes.svg" width="51" height="45" alt="icon notes" class="img-responsive">
 						</div>
-						<h3><a href="#">Make notes easily</a></h3>
+						<h3><a href="#">Social Planning</a></h3>
 						<p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore.</p>
 					</li>
 					<li>
 						<div class="icon-holder">
 							<img src="images/cleaning.png" width="37" height="51" alt="icon cleaning" class="img-responsive">
 						</div>
-						<h3><a href="#">One click cleaning</a></h3>
+						<h3><a href="#">Community Management</a></h3>
 						<p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore.</p>
 					</li>
 					<li class = "outsider">
 						<div class="icon-holder">
 							<img src="images/calendar.svg" width="49" height="51" alt="icon calandar" class="img-responsive">
 						</div>
-						<h3><a href="#">Daily report</a></h3>
+						<h3><a href="#">Weekly report</a></h3>
 						<p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore.</p>
 					</li>
 				</ul>
@@ -210,10 +210,10 @@
 							<div class="testimonials-mask">
 								<div class="testimonials-slide">
 									<blockquote>
-										<q>Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium<br> lectorum. Mirum est notare quam littera gothica, </q>
+										<p>User experience and user interface (UX/UI) design<br> and standardize website content </p>
 										<cite>
-											<strong class="name">David Ramon</strong>
-											<span class="subtitle">Project Manager, D360-Studio</span>
+											<strong class="name">Furyviet</strong>
+											<span class="subtitle">UX/UI Designer, Freewill Agency</span>
 										</cite>
 									</blockquote>
 								</div>
@@ -223,10 +223,10 @@
 							<div class="testimonials-mask">
 								<div class="testimonials-slide">
 									<blockquote>
-										<q>Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium<br> lectorum. Mirum est notare quam littera gothica, </q>
+										<p>Build website ideas, content pillars,<br> and campaign to build the best community content. </p>
 										<cite>
-											<strong class="name">David Ramon</strong>
-											<span class="subtitle">Project Manager, D360-Studio</span>
+											<strong class="name">EdwardT</strong>
+											<span class="subtitle">Content Creator, Freewill Agency</span>
 										</cite>
 									</blockquote>
 								</div>
@@ -236,10 +236,10 @@
 							<div class="testimonials-mask">
 								<div class="testimonials-slide">
 									<blockquote>
-										<q>Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium<br> lectorum. Mirum est notare quam littera gothica, </q>
+										<p> Analyze content and images, <br> and synchronize according to customer requirements. </p>
 										<cite>
-											<strong class="name">David Ramon</strong>
-											<span class="subtitle">Project Manager, D360-Studio</span>
+											<strong class="name">WilliamX</strong>
+											<span class="subtitle">Project Manager, Freewill Agency</span>
 										</cite>
 									</blockquote>
 								</div>
@@ -358,9 +358,12 @@
 					<div class="col-xs-12 col-sm-6 descr">
 						<div class="align">
 							<header class="heading-wrap">
-								<h2>Try our free trial today. If you don’t like, you can cancel it anytime!</h2>
+								<h2>Create the best branding strategy for your business.</h2>
 							</header>
-							<p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+							<p>Design brand identities for businesses. </p>
+							<p>Advertising and communication publications (brochure, banner,etc..)</p>
+							<p>Design advertisements, and professional presentations.</p>
+							<p>3D design and 3D modeling for products and publications</p>
 							<a href="#" class="btn btn-info">Try our demo</a>
 						</div>
 					</div>
