--- a/index.html
+++ b/index.html
@@ -63,10 +63,11 @@
 						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 							<ul class="nav navbar-nav navbar-right">
 								<li><a href="#" data-scroll-nav="0">Home</a></li>
-								<li><a href="#" data-scroll-nav="1">Social Media</a></li>
-								<li><a href="#" data-scroll-nav="2">SEO</a></li>
-								<li><a href="#" data-scroll-nav="3">Website</a></li>
-								<li><a href="#" data-scroll-nav="4">Branding</a></li>
+								<li><a href="#Social_media" data-scroll-nav="1">Social Media</a></li>
+								<li><a href="#SEO" data-scroll-nav="2">SEO</a></li>
+								<li><a href="#Website" data-scroll-nav="3">Website</a></li>
+								<li><a href="#brand" data-scroll-nav="4">Branding</a></li>
+								
 							</ul>
 						</div>
 					</nav>
@@ -94,7 +95,7 @@
 			</section>
 			<!-- Hero area of the page end -->
 			<!-- Features area of the page -->
-			<section class="features-area container" data-scroll-index="1">
+			<section id="Social_media" class="features-area container" data-scroll-index="1">
 				<div class="row">
 					<header class="col-xs-12 heading-wrap col-sm-6 col-sm-offset-3 text-center">
 						<h2>Best software to manage <br>your office <span class="text-bright">work and workers!</span></h2>
@@ -104,54 +105,54 @@
 				<ul class="features-list">
 					<li>
 						<div class="icon-holder">
-							<img src="images/id-card.svg" width="54" height="52" alt="icon id-card" class="img-responsive">
+							<img src="images/icon-replace/Reseacrh.png" width="52" height="52" alt="icon id-card" class="img-responsive">
 						</div>
 						<h3><a href="#">Keyword research</a></h3>
-						<p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore.</p>
+						<p>Analyze website metrics, keyword and come up with the best strategy for customers.</p>
 					</li>
 					<li>
 						<div class="icon-holder">
-							<img src="images/clock.svg" width="56" height="50" alt="icon clock" class="img-responsive">
+							<img src="images/icon-replace/adwords.png" width="52" height="52" alt="icon clock" class="img-responsive">
 						</div>
 						<h3><a href="#">Advertising strategy</a></h3>
-						<p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore.</p>
+						<p>Analyze business advertising budgets and resources, and offer optimal and effective advertising solutions.</p>
 					</li>
 					<li>
 						<div class="icon-holder">
-							<img src="images/notes.svg" width="51" height="45" alt="icon notes" class="img-responsive">
+							<img src="images/icon-replace/Social.png" width="52" height="52" alt="icon notes" class="img-responsive">
 						</div>
 						<h3><a href="#">Social Planning</a></h3>
-						<p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore.</p>
+						<p>Build a community campaign plan to effectively increase interaction and attract customers.</p>
 					</li>
 					<li>
 						<div class="icon-holder">
-							<img src="images/cleaning.png" width="37" height="51" alt="icon cleaning" class="img-responsive">
+							<img src="images/icon-replace/Coumunity.png" width="52" height="52" alt="icon cleaning" class="img-responsive">
 						</div>
 						<h3><a href="#">Community Management</a></h3>
-						<p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore.</p>
+						<p>Building and managing the community according to prescribed standards will ensure good community quality.</p>
 					</li>
 					<li class = "outsider">
 						<div class="icon-holder">
-							<img src="images/calendar.svg" width="49" height="51" alt="icon calandar" class="img-responsive">
+							<img src="images/icon-replace/Report.png" width="52" height="52" alt="icon calandar" class="img-responsive">
 						</div>
 						<h3><a href="#">Weekly report</a></h3>
-						<p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore.</p>
+						<p>Weekly results updates for advertising campaigns, community metrics, and actual results achieved.</p>
 					</li>
 				</ul>
 				<!-- Features of the page end -->
 			</section>
 			<!-- Features area of the page end -->
 			<!-- Product Features of the page -->
-			<section class="container product-features" data-scroll-index="2">
+			<section id="SEO" class="container product-features" data-scroll-index="2">
 				<div class="row sameheight-container">
 					<!-- Descr of the page -->
 					<div class="col-xs-12 col-sm-6 descr sameheight">
 						<div class="align">
-							<h2>No more confusion and complex to manage your office.</h2>
+							<h2>Bring the best SEO strategy to your business.</h2>
 								<p> -Keyword research, keyword implementation planning</p>
 								<p>	-Optimize the website's front-end and back-end.</p>
 								<p> -Optimize content and implement an editorial schedule.</p>	
-								<p> -Write content for the website, create Front-end content.</p>	
+								<p> -Write content for the website, create front-end content.</p>	
 								<p>	-Combination of SEO and PPC</p>
 							<ul class="facts-list">
 								<li>
@@ -194,7 +195,7 @@
 			</aside>
 			<!-- Demo block of the page end -->
 			<!-- Testimonials of the page -->
-			<section class="testimonials text-center" data-scroll-index="3">
+			<section id="Website" class="testimonials text-center" data-scroll-index="3">
 				<div class="container">
 					<div class="row">
 						<header class="col-xs-12 heading-wrap col-sm-6 col-sm-offset-3 text-center">
@@ -275,7 +276,7 @@
 			</aside> 
 			<!-- Video block of the page end -->
 			<!-- Price offers of the page -->
-			<section class="container price-offers" data-scroll-index="4">
+			<section class="container price-offers" data-scroll-index="5">
 				<div class="row">
 					<header class="col-xs-12 heading-wrap col-sm-6 col-sm-offset-3 text-center">
 						<h2>Select your <span class="text-bright">plan as your choise</span>, <br>no need to pay extra money.</h2>
@@ -350,7 +351,7 @@
 			</section>
 			<!-- Price offers of the page end -->
 			<!-- Trial block of the page -->
-			<section class="trial-block container">
+			<section id="brand" class="trial-block container" data-scroll-index="4">
 				<div class="row">
 					<div class="alignleft">
 						<img src="./assets/image/Image-end-contetn/img06.jpg" alt="image description" class="img-responsive">
