--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 				<div class="container">
 					<div class="row">
 						<header class="heading-holder col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
-							<h1><span class="text-small">Best software for your office</span>Try Freewill Today!</h1>
+							<h1><span class="text-small">Best solutions for your office</span>Try Freewill Today!</h1>
 							<p> -- Freewill -- Nothing Better Than Free </p>
 						</header>
 					</div>
@@ -98,7 +98,7 @@
 			<section id="Social_media" class="features-area container" data-scroll-index="1">
 				<div class="row">
 					<header class="col-xs-12 heading-wrap col-sm-6 col-sm-offset-3 text-center">
-						<h2>Best software to manage <br>your office <span class="text-bright">work and workers!</span></h2>
+						<h2>We bring the best social media strategies <br>And solutions for <span class="text-bright">you and your business!</span></h2>
 					</header>
 				</div>
 				<!-- Features of the page -->
@@ -148,7 +148,7 @@
 					<!-- Descr of the page -->
 					<div class="col-xs-12 col-sm-6 descr sameheight">
 						<div class="align">
-							<h2>Bring the best SEO strategy to your business.</h2>
+							<h2>Provide the best SEO strategy to your business.</h2>
 								<p> -Keyword research, keyword implementation planning</p>
 								<p>	-Optimize the website's front-end and back-end.</p>
 								<p> -Optimize content and implement an editorial schedule.</p>	
@@ -181,13 +181,13 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-xs-12 col-md-7">
-							<h2>Need a perfect software to manage everything?</h2>
-							<p>Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam.</p>
+							<h2>Need a perfect team to manage everything?</h2>
+							<p>We are young people with the desire to prove ourselves. With the strength of understanding what young customers want, we offer the most valuable digital marketing solutions for businesses.</p>
 						</div>
 						<div class="col-xs-12 col-md-5">
 							<ul>
-								<li><a href="#" class="btn btn-default btn-white">Purchase now</a></li>
-								<li><a href="#">Try our Demo</a></li>
+								<li><a href="#" class="btn btn-default btn-white">Visit our website</a></li>
+								<li><a href="#">Contact us now</a></li>
 							</ul>
 						</div>
 					</div>
@@ -199,7 +199,7 @@
 				<div class="container">
 					<div class="row">
 						<header class="col-xs-12 heading-wrap col-sm-6 col-sm-offset-3 text-center">
-							<h2>More than <span class="text-bright">20,000+ Customers</span>, <br>see some wishes here.</h2>
+							<h2>More than <span class="text-bright">20 members</span>, <br> with experience in social media.</h2>
 						</header>
 					</div>
 				</div>
@@ -260,8 +260,8 @@
 					</div>
 					<div class="row">
 						<div class="col-xs-12 heading-wrap btn-holder col-sm-8 col-sm-offset-2 col-lg-6 col-lg-offset-3 text-center">
-							<h2>Our software is totally customisable and easy to use, <span class="text-bright">no need to know anything!</span></h2>
-							<a href="#" class="btn btn-info">Purchase now</a>
+							<h2>Your request, <span class="text-bright">And the rest of us.</span></h2>
+							<a href="#" class="btn btn-info">Contact now</a>
 						</div>
 					</div>
 				</aside>
@@ -365,7 +365,7 @@
 							<p>Advertising and communication publications (brochure, banner,etc..)</p>
 							<p>Design advertisements, and professional presentations.</p>
 							<p>3D design and 3D modeling for products and publications</p>
-							<a href="#" class="btn btn-info">Try our demo</a>
+							<a href="#" class="btn btn-info">View our Portfolio</a>
 						</div>
 					</div>
 				</div>
@@ -406,7 +406,7 @@
 					<div class="row">
 						<div class="col-xs-12 text-center col-sm-6 col-sm-offset-3">
 							<div class="logo"><a href="#"><img src="images/logo2.png" alt="cooper"></a></div>
-							<p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore</p>
+							<p>Freewill - Future, Free and Creative</p>
 							<!-- Social Networks of the page -->
 							<ul class="social-networks">
 								<li><a href="#"><span class="icon ico-facebook"></span></a></li>
@@ -424,7 +424,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-12 col-sm-4 col-sm-offset-4 text-center">
-						<p>&copy; Copyright 2017, <a class="company-name" href="#">Freewill.digital</a> <br>All Rights Reserved</p>
+						<p>&copy; Copyright 2022, <a class="company-name" href="https://freewill.digital">Freewill</a> <br>All Rights Reserved</p>
 					</div>
 				</div>
 			</div>
