--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 		<!-- Main of the page -->
 		<main id="main">
 			<!-- Hero area of the page -->
-			<section class="hero-area text-center overlay" style="background-image: url(http://placehold.it/1920x780);" data-scroll-index="0">
+			<section class="hero-area text-center overlay" style="background-image: url(./assets/image/main-img/creative-flat-lay-photo-workspace-desk.jpg);" data-scroll-index="0">
 				<div id="particles-js"></div>
 				<div class="container">
 					<div class="row">
@@ -124,7 +124,7 @@
 						<h3><a href="#">Social Planning</a></h3>
 						<p>Build a community campaign plan to effectively increase interaction and attract customers.</p>
 					</li>
-					<li>
+					<li class = "outsider">
 						<div class="icon-holder">
 							<img src="images/icon-replace/Coumunity.png" width="52" height="52" alt="icon cleaning" class="img-responsive">
 						</div>
@@ -149,11 +149,11 @@
 					<div class="col-xs-12 col-sm-6 descr sameheight">
 						<div class="align">
 							<h2>Provide the best SEO strategy to your business.</h2>
-								<p> -Keyword research, keyword implementation planning</p>
-								<p>	-Optimize the website's front-end and back-end.</p>
-								<p> -Optimize content and implement an editorial schedule.</p>	
-								<p> -Write content for the website, create front-end content.</p>	
-								<p>	-Combination of SEO and PPC</p>
+								<p> Keyword research, keyword implementation planning</p>
+								<p>	Optimize the website's front-end and back-end.</p>
+								<p> Optimize content and implement an editorial schedule.</p>	
+								<p> Write content for the website, create front-end content.</p>	
+								<p>	Combination of SEO and PPC</p>
 							<ul class="facts-list">
 								<li>
 									<h3><span class="counter">230</span><span class="text-block">Components</span></h3>
