--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 					<!-- Logo of the page -->
 					<div class="logo">
 						<a href="#">
-							<img src="images/logo2.png" alt="cooper" class="light img-responsive">
-							<img src="images/logo.png" alt="cooper" class="dark img-responsive">
+							<img src="./images/Logo-header/white.png" alt="cooper" class="light img-responsive">
+							<img src="./images/Logo-header/back.png" alt="cooper" class="dark img-responsive">
 						</a>
 					</div>
 					<!-- Logo of the page end -->
@@ -79,7 +79,7 @@
 		<!-- Main of the page -->
 		<main id="main">
 			<!-- Hero area of the page -->
-			<section class="hero-area text-center overlay" style="background-image: url(./assets/image/main-img/creative-flat-lay-photo-workspace-desk.jpg);" data-scroll-index="0">
+			<section class="hero-area text-center overlay" style="background-image: url();" data-scroll-index="0">
 				<div id="particles-js"></div>
 				<div class="container">
 					<div class="row">
@@ -405,11 +405,11 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-xs-12 text-center col-sm-6 col-sm-offset-3">
-							<div class="logo"><a href="#"><img src="images/logo2.png" alt="cooper"></a></div>
+							<div class="logo"><a href="#"><img src="./images/Logo-header/white.png" alt="cooper"></a></div>
 							<p>Freewill - Future, Free and Creative</p>
 							<!-- Social Networks of the page -->
 							<ul class="social-networks">
-								<li><a href="#"><span class="icon ico-facebook"></span></a></li>
+								<li><a href="https://www.facebook.com/265849687321615/posts/1253629605210280/?substory_index=0&mibextid=Nif5oz"><span class="icon ico-facebook"></span></a></li>
 								<li><a href="#"><span class="icon ico-twitter"></span></a></li>
 								<li><a href="#"><span class="icon ico-google-plus"></span></a></li>
 								<li><a href="#"><span class="icon ico-pinterest"></span></a></li>
