--- a/vi.html
+++ b/vi.html
@@ -59,10 +59,10 @@
 								<span class="icon-bar"></span>
 							</button>
 						</div>
-						<a href="./vi.html" class="btn btn-default btn-white">VN / ENG</a>
+						<a href="./index.html" class="btn btn-default btn-white">ENG / VN</a>
 						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 							<ul class="nav navbar-nav navbar-right">
-								<li><a href="#" data-scroll-nav="0">Home</a></li>
+								<li><a href="#" data-scroll-nav="0">Trang chủ</a></li>
 								<li><a href="#Social_media" data-scroll-nav="1">Social Media</a></li>
 								<li><a href="#SEO" data-scroll-nav="2">SEO</a></li>
 								<li><a href="#Website" data-scroll-nav="3">Website</a></li>
