--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<meta name="keywords" content="app, app landing, clean, landing, landing page, marketing, marketing landing, product, product landing, responsive, seo, startup landing ">
 	<meta name="author" content="App Landing Page">
 	<title>FreeWill Agency</title>
+	<link rel="icon" type="image/x-icon" href="./images/Favicon/faticon.png">
 	<!-- include the site stylesheet -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i%7COswald:400,700" rel="stylesheet">
 	<!-- include the site stylesheet -->
@@ -45,7 +46,7 @@
 					<div class="logo">
 						<a href="#">
 							<img src="./images/Logo-header/white.png" alt="cooper" class="light img-responsive">
-							<img src="./images/Logo-header/back.png" alt="cooper" class="dark img-responsive">
+							<img src="./images/Logo-header/black.png" alt="cooper" class="dark img-responsive">
 						</a>
 					</div>
 					<!-- Logo of the page end -->
@@ -84,7 +85,7 @@
 				<div class="container">
 					<div class="row">
 						<header class="heading-holder col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
-							<h1><span class="text-small">Best solutions for your office</span>Try Freewill Today!</h1>
+							<h1><span class="text-small">Best solutions for your office</span>FREEWILL AGENCY</h1>
 							<p> -- Freewill -- Nothing Better Than Free </p>
 						</header>
 					</div>
@@ -154,7 +155,8 @@
 								<p> Optimize content and implement an editorial schedule.</p>	
 								<p> Write content for the website, create front-end content.</p>	
 								<p>	Combination of SEO and PPC</p>
-							<ul class="facts-list">
+						<!--	
+								<ul class="facts-list"> //
 								<li>
 									<h3><span class="counter">230</span><span class="text-block">Components</span></h3>
 								</li>
@@ -165,6 +167,7 @@
 									<h3>Unlimited<span class="text-block">users</span></h3>
 								</li>
 							</ul>
+						-->
 						</div>
 					</div>
 					<!-- Descr of the page end -->
