--- a/vi.html
+++ b/vi.html
@@ -17,6 +17,7 @@
 	<meta name="keywords" content="app, app landing, clean, landing, landing page, marketing, marketing landing, product, product landing, responsive, seo, startup landing ">
 	<meta name="author" content="App Landing Page">
 	<title>FreeWill Agency</title>
+	<link rel="icon" type="image/x-icon" href="./images/Favicon/faticon.png">
 	<!-- include the site stylesheet -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i%7COswald:400,700" rel="stylesheet">
 	<!-- include the site stylesheet -->
@@ -45,7 +46,7 @@
 					<div class="logo">
 						<a href="#">
 							<img src="./images/Logo-header/white.png" alt="cooper" class="light img-responsive">
-							<img src="./images/Logo-header/back.png" alt="cooper" class="dark img-responsive">
+							<img src="./images/Logo-header/black.png" alt="cooper" class="dark img-responsive">
 						</a>
 					</div>
 					<!-- Logo of the page end -->
@@ -62,7 +63,7 @@
 						<a href="./index.html" class="btn btn-default btn-white">ENG / VN</a>
 						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 							<ul class="nav navbar-nav navbar-right">
-								<li><a href="#" data-scroll-nav="0">Trang chủ</a></li>
+								<li><a href="#" data-scroll-nav="0">Home</a></li>
 								<li><a href="#Social_media" data-scroll-nav="1">Social Media</a></li>
 								<li><a href="#SEO" data-scroll-nav="2">SEO</a></li>
 								<li><a href="#Website" data-scroll-nav="3">Website</a></li>
@@ -84,7 +85,7 @@
 				<div class="container">
 					<div class="row">
 						<header class="heading-holder col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
-							<h1><span class="text-small">Best solutions for your office</span>Try Freewill Today!</h1>
+							<h1><span class="text-small">Giải pháp toàn diện cho doanh nghiệp của bạn</span>Freewill Agency</h1>
 							<p> -- Freewill -- Nothing Better Than Free </p>
 						</header>
 					</div>
@@ -98,7 +99,7 @@
 			<section id="Social_media" class="features-area container" data-scroll-index="1">
 				<div class="row">
 					<header class="col-xs-12 heading-wrap col-sm-6 col-sm-offset-3 text-center">
-						<h2>We bring the best social media strategies <br>And solutions for <span class="text-bright">you and your business!</span></h2>
+						<h2>Chúng tôi mang đến giải pháp toàn diện <br> và tối ưu nhất <span class="text-bright">cho doanh nghiệp của bạn!</span></h2>
 					</header>
 				</div>
 				<!-- Features of the page -->
@@ -107,36 +108,36 @@
 						<div class="icon-holder">
 							<img src="images/icon-replace/Reseacrh.png" width="52" height="52" alt="icon id-card" class="img-responsive">
 						</div>
-						<h3><a href="#">Keyword research</a></h3>
-						<p>Analyze website metrics, keyword and come up with the best strategy for customers.</p>
+						<h3><a href="#">Nghiên cứu từ khoá</a></h3>
+						<p>Phân tích dữ liệu trang web, nghiên cứu từ khóa và đưa ra chiến lược tốt nhất cho khách hàng.</p>
 					</li>
 					<li>
 						<div class="icon-holder">
 							<img src="images/icon-replace/adwords.png" width="52" height="52" alt="icon clock" class="img-responsive">
 						</div>
-						<h3><a href="#">Advertising strategy</a></h3>
-						<p>Analyze business advertising budgets and resources, and offer optimal and effective advertising solutions.</p>
+						<h3><a href="#">CHIẾN LƯỢC QUẢNG CÁO</a></h3>
+						<p>Dựa vào nguồn lực quảng cáo của doanh nghiệp, đưa ra các giải pháp quảng cáo tối ưu và hiệu quả.</p>
 					</li>
 					<li>
 						<div class="icon-holder">
 							<img src="images/icon-replace/Social.png" width="52" height="52" alt="icon notes" class="img-responsive">
 						</div>
-						<h3><a href="#">Social Planning</a></h3>
-						<p>Build a community campaign plan to effectively increase interaction and attract customers.</p>
+						<h3><a href="#">Kế Hoạch Truyền Thông</a></h3>
+						<p>Xây dựng kế hoạch chiến dịch cộng đồng nhằm tăng tương tác và thu hút khách hàng hiệu quả.</p>
 					</li>
 					<li class = "outsider">
 						<div class="icon-holder">
 							<img src="images/icon-replace/Coumunity.png" width="52" height="52" alt="icon cleaning" class="img-responsive">
 						</div>
-						<h3><a href="#">Community Management</a></h3>
-						<p>Building and managing the community according to prescribed standards will ensure good community quality.</p>
+						<h3><a href="#">Quản lý cộng đồng</a></h3>
+						<p>Xây dựng và quản lý cộng đồng theo tiêu chuẩn quy định nhằm đảm bảo chất lượng cộng đồng tốt nhất.</p>
 					</li>
 					<li class = "outsider">
 						<div class="icon-holder">
 							<img src="images/icon-replace/Report.png" width="52" height="52" alt="icon calandar" class="img-responsive">
 						</div>
-						<h3><a href="#">Weekly report</a></h3>
-						<p>Weekly results updates for advertising campaigns, community metrics, and actual results achieved.</p>
+						<h3><a href="#">Báo cáo mỗi tuần</a></h3>
+						<p>Cập nhật kết quả hàng tuần của các chiến dịch quảng cáo, số liệu cộng đồng và kết quả thực tế đạt được.</p>
 					</li>
 				</ul>
 				<!-- Features of the page end -->
@@ -148,13 +149,14 @@
 					<!-- Descr of the page -->
 					<div class="col-xs-12 col-sm-6 descr sameheight">
 						<div class="align">
-							<h2>Provide the best SEO strategy to your business.</h2>
-								<p> Keyword research, keyword implementation planning</p>
-								<p>	Optimize the website's front-end and back-end.</p>
-								<p> Optimize content and implement an editorial schedule.</p>	
-								<p> Write content for the website, create front-end content.</p>	
-								<p>	Combination of SEO and PPC</p>
-							<ul class="facts-list">
+							<h2>Cung cấp chiến lược SEO tốt nhất cho doanh nghiệp của bạn.</h2>
+								<p> Nghiên cứu từ khóa, lập kế hoạch triển khai từ khóa.</p>
+								<p>	Tối ưu hóa front-end và back-end của trang web.	</p>
+								<p> Tối ưu hóa nội dung và thực hiện lịch trình biên tập.</p>	
+								<p> Viết nội dung cho trang web, sáng tạo nội dung front-end..</p>	
+								<p>	Kết hợp giữa SEO và PPC.</p>
+							<!--
+								<ul class="facts-list">
 								<li>
 									<h3><span class="counter">230</span><span class="text-block">Components</span></h3>
 								</li>
@@ -165,6 +167,7 @@
 									<h3>Unlimited<span class="text-block">users</span></h3>
 								</li>
 							</ul>
+							-->
 						</div>
 					</div>
 					<!-- Descr of the page end -->
@@ -181,13 +184,13 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-xs-12 col-md-7">
-							<h2>Need a perfect team to manage everything?</h2>
-							<p>We are young people with the desire to prove ourselves. With the strength of understanding what young customers want, we offer the most valuable digital marketing solutions for businesses.</p>
+							<h2>Cần một đội ngũ hoàn hảo để quản lý mọi thứ?</h2>
+							<p>Chúng tôi là những người trẻ với khát khao chứng tỏ bản thân. Với thế mạnh thấu hiểu khách hàng trẻ muốn gì, chúng tôi mang đến những giải pháp digital marketing giá trị nhất cho doanh nghiệp của bạn.</p>
 						</div>
 						<div class="col-xs-12 col-md-5">
 							<ul>
-								<li><a href="#" class="btn btn-default btn-white">Visit our website</a></li>
-								<li><a href="#">Contact us now</a></li>
+								<li><a href="#" class="btn btn-default btn-white">Xem website</a></li>
+								<li><a href="#">Liên hệ ngay</a></li>
 							</ul>
 						</div>
 					</div>
@@ -199,7 +202,7 @@
 				<div class="container">
 					<div class="row">
 						<header class="col-xs-12 heading-wrap col-sm-6 col-sm-offset-3 text-center">
-							<h2>More than <span class="text-bright">20 members</span>, <br> with experience in social media.</h2>
+							<h2>Hơn <span class="text-bright">20 thành viên</span>, <br> với nhiều kinh nghiệm trong lĩnh vực truyền thông mạng xã hội.</h2>
 						</header>
 					</div>
 				</div>
@@ -211,7 +214,7 @@
 							<div class="testimonials-mask">
 								<div class="testimonials-slide">
 									<blockquote>
-										<p>User experience and user interface (UX/UI) design<br> and standardize website content </p>
+										<p>Thiết kế giao diện chuẩn UX/UI<br> và chuẩn hoá hình ảnh website. </p>
 										<cite>
 											<strong class="name">Furyviet</strong>
 											<span class="subtitle">UX/UI Designer, Freewill Agency</span>
@@ -224,7 +227,7 @@
 							<div class="testimonials-mask">
 								<div class="testimonials-slide">
 									<blockquote>
-										<p>Build website ideas, content pillars,<br> and campaign to build the best community content. </p>
+										<p>Biên tập ý tưởng trang web<br> và chiến lược xây dựng cộng đồng. </p>
 										<cite>
 											<strong class="name">EdwardT</strong>
 											<span class="subtitle">Content Creator, Freewill Agency</span>
@@ -237,7 +240,7 @@
 							<div class="testimonials-mask">
 								<div class="testimonials-slide">
 									<blockquote>
-										<p> Analyze content and images, <br> and synchronize according to customer requirements. </p>
+										<p> Phân tích nội dung và hình ảnh <br>, đồng bộ hoá sản phẩm theo yêu cầu khách hàng. </p>
 										<cite>
 											<strong class="name">WilliamX</strong>
 											<span class="subtitle">Project Manager, Freewill Agency</span>
@@ -260,8 +263,8 @@
 					</div>
 					<div class="row">
 						<div class="col-xs-12 heading-wrap btn-holder col-sm-8 col-sm-offset-2 col-lg-6 col-lg-offset-3 text-center">
-							<h2>Your request, <span class="text-bright">And the rest of us.</span></h2>
-							<a href="#" class="btn btn-info">Contact now</a>
+							<h2>Yêu cầu của bạn, <span class="text-bright">giải pháp của chúng tôi.</span></h2>
+							<a href="#" class="btn btn-info">Liên hệ ngay</a>
 						</div>
 					</div>
 				</aside>
@@ -359,13 +362,13 @@
 					<div class="col-xs-12 col-sm-6 descr">
 						<div class="align">
 							<header class="heading-wrap">
-								<h2>Create the best branding strategy for your business.</h2>
+								<h2>Tạo chiến lược xây dựng thương hiệu tốt nhất cho doanh nghiệp của bạn.</h2>
 							</header>
-							<p>Design brand identities for businesses. </p>
-							<p>Advertising and communication publications (brochure, banner,etc..)</p>
-							<p>Design advertisements, and professional presentations.</p>
-							<p>3D design and 3D modeling for products and publications</p>
-							<a href="#" class="btn btn-info">View our Portfolio</a>
+							<p>Thiết kế bộ nhận diện thương hiệu cho doanh nghiệp. </p>
+							<p>Các ấn phẩm quảng cáo, truyền thông (brochure, banner,..).</p>
+							<p>Thiết kế quảng cáo, và bản thuyết trình chuyên nghiệp.</p>
+							<p>Thiết kế 3D và dựng mô hình 3D cho sản phẩm, ấn phẩm.</p>
+							<a href="#" class="btn btn-info">Xem thêm sản phẩm</a>
 						</div>
 					</div>
 				</div>
@@ -375,7 +378,7 @@
 			<aside class="brands-area container">
 				<div class="row">
 					<header class="col-xs-12 heading-wrap col-sm-6 col-sm-offset-3 text-center">
-						<h2>Some of our <span class="text-bright">trusted customers</span>, <br>who are statisfied!</h2>
+						<h2>Khách hàng <span class="text-bright">đã tin tưởng</span>, <br>và hài lòng về chúng tôi!</h2>
 					</header>
 				</div>
 				<div class="row">
