--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 		<aside class="video-block">
 				<div class="video overlay">
 					<img src="./assets/image/img-vid/img05.jpg" alt="image description" class="img-responsive">
-					<a href="http://www.youtube.com/embed/9bZkp7q19f0?autoplay=1" class="ico-play lightbox fancybox.iframe"></a>
+					<a href="#" class="ico-play lightbox fancybox.iframe"></a>
 				</div>
 			</aside> 
 			<!-- Video block of the page end -->
@@ -375,6 +375,8 @@
 			</section>
 			<!-- Trial block of the page end -->
 			<!-- Brands area of the page -->
+
+
 			<aside class="brands-area container">
 				<div class="row">
 					<header class="col-xs-12 heading-wrap col-sm-6 col-sm-offset-3 text-center">
